test/fail/pageastemplate.app
//Shouldn't use page as template

application test

section datamodel

  
  define page home(){
    "1"
    home2()
  }
  
  define page home2(){
    "2"
  }